--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.14.2",
+    "react-toastify": "^10.0.6",
     "sort-by": "^0.0.2",
     "swiper": "^11.1.9",
     "yup": "^1.4.0"
