--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "headlessui": "^0.0.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-iframe": "^1.8.5",
     "react-paginate": "^8.2.0",
     "react-player": "^2.16.0",
     "react-query": "^3.39.3",
